# Retros

./: Cargo.toml  x86_64-retros.json
.cargo/: config
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
