[package]
name					= "retros"
version					= "0.1.0"
authors					= ["Will"]
edition					= "2018"

[dependencies]
bootloader				= "0.9.3"
volatile 				= "0.2.6"
spin 					= "0.5.2"
x86_64 					= "0.11.0"
uart_16550				= "0.2.0"
rlibc                   = "1.0.0"

[dependencies.lazy_static]
version 				= "1.0"
features 				= ["spin_no_std"]

[package.metadata.bootimage]
run-command				= ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
test-args				= ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code 	= 33
test-timeout            = 60